--- a/Views/Shared/_NavBarPartial.cshtml
+++ b/Views/Shared/_NavBarPartial.cshtml
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" asp-controller="DashboardMvc" asp-action="Dashboard">
+        <a class="navbar-brand d-flex align-items-center" asp-controller="BuscarMvc" asp-action="Buscar">
             <span class="material-icons" style="font-size:36px;">folder_open</span>
             <span class="ms-2">VoxDocs</span>
         </a>
@@ -13,7 +13,7 @@
             <ul class="navbar-nav ms-auto align-items-center" id="navbarItems">
                 <!-- Suporte Voz -->
                 <li class="nav-item me-2">
-                    <form method="get" asp-controller="NavBarMvc" asp-action="PublicSupport" class="m-0">
+                    <form asp-controller="BuscarMvc" asp-action="Buscar" class="m-0">
                         <button type="submit" class="btn btn-custom d-flex align-items-center">
                             <span class="material-icons me-1">mic</span>
                             <span class="d-none d-md-inline">Suporte Voz</span>
