--- a/Views/Pages/Login.cshtml
+++ b/Views/Pages/Login.cshtml
@@ -82,7 +82,7 @@
 <body>
     <div class="login-container">
         <div class="login-form">
-            <h1>Bem-vindo ao <span>VoxDocs</span></h1>
+            <h1>Bem-vindo a <span>VoxDocs</span></h1>
 
             <form asp-controller="LoginMvc" asp-action="Login" method="post" novalidate>
                 <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
